Removal of "Show code" button from SB

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -3,3 +3,8 @@
 <script>
   document.title = 'Malty';
 </script>
+<style>
+  button.docblock-code-toggle {
+    display: none !important;
+  }
+</style>
