--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,3 +3,8 @@
 <script>
   document.title = 'Malty';
 </script>
+<style>
+  button.docblock-code-toggle {
+    display: none !important;
+  }
+</style>
