--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,5 +1,11 @@
 <!-- Storybook override -->
 <link rel="icon" href="favicon.ico" type="image/png" sizes="32x32" />
+<link
+  rel="preload"
+  href="https://cdn.carlsberggroup.com/fonts/montserrat/Montserrat-VariableFont_wght.ttf"
+  as="font"
+  crossorigin="anonymous"
+/>
 <script>
   document.title = 'Malty';
 </script>
