--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,10 +1,10 @@
 <!-- Storybook override -->
 <link rel="icon" href="favicon.ico" type="image/png" sizes="32x32" />
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-  href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
-  rel="stylesheet"
+  rel="preload"
+  href="https://cdn.carlsberggroup.com/fonts/montserrat/Montserrat-VariableFont_wght.ttf"
+  as="font"
+  crossorigin="anonymous"
 />
 <script>
   document.title = 'Malty';
