feat(global): Preload all storybook fonts needed

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -6,6 +6,12 @@
   as="font"
   crossorigin="anonymous"
 />
+<link
+  rel="preload"
+  href="https://cdn.carlsberggroup.com/fonts/montserrat/Montserrat-VF.woff2"
+  as="font"
+  crossorigin="anonymous"
+/>
 <script>
   document.title = 'Malty';
 </script>
